--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,13 +7,17 @@ body {
 
 .movie-card {
   background-color: #fff;
-  border: 0;
+  /* border: 0; */
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
-  padding: 1rem;
+  /* padding: 1rem; */
   cursor: pointer;
-  position: relative;
-  margin: 1rem auto;
+  /* position: relative; */
+  margin-top: 1rem;
+  width: 30rem;
+  height: 265px;
+  text-align: center;
+  border: 4px solid violet;
 }
 
 .movie-director {
@@ -38,6 +42,8 @@ body {
 
 .saved-list h3 {
   margin-right: 10px;
+  /* border: 3px solid orange; */
+  text-align: center;
 }
 
 .saved-movie {
@@ -53,20 +59,44 @@ body {
   width: 75%;
   margin: 1rem auto;
 }
-.save-button {
-  position: absolute;
-  top: 25px;
-  right: 25px;
-  border: 1px solid grey;
+
+.home-button {
   padding: 5px 10px;
+  background-color: lightskyblue;
+}
+
+.movie-list {
+  /* border: 4px solid red; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.save-button {
+  /* position: absolute; */
+  /* top: 25px; */
+  /* right: 25px; */
+  border: 1px solid grey;
+  padding: 7px 15px;
+  margin: 5px;
   background-color: lightseagreen;
 }
+
 .save-button:hover {
   background-color: green;
   color: white;
 }
 
-.home-button {
-  padding: 5px 10px;
-  background-color: lightskyblue;
+.hideBtn {
+  visibility: hidden;
+}
+
+.wrapper {
+  /* justify-content: center; */
+  /* border: 4px solid green; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
+  /* align-items: center; */
 }
