--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,22 +2,23 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #f2f2f2;
+  background-color: #1e90ff;
 }
 
 .movie-card {
   background-color: #fff;
-  /* border: 0; */
-  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
-    0 2px 4px rgba(0, 0, 0, 0.24);
-  /* padding: 1rem; */
+  border: 0;
+  /* box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
+    0 2px 4px rgba(0, 0, 0, 0.24); */
+  box-shadow: 25px 25px 5px 0px rgba(0, 0, 0, 0.5);
+  padding: 1rem;
   cursor: pointer;
-  /* position: relative; */
+  position: relative;
   margin-top: 1rem;
+  margin: 3rem auto;
   width: 30rem;
   height: 265px;
   text-align: center;
-  border: 4px solid violet;
 }
 
 .movie-director {
@@ -28,12 +29,11 @@ body {
 .saved-list {
   background-color: #fff;
   border: 0;
-  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
-    0 2px 4px rgba(0, 0, 0, 0.24);
+  box-shadow: 25px 25px 5px 0px rgba(0, 0, 0, 0.5);
   padding: 1rem;
   cursor: pointer;
   position: relative;
-  margin: 1rem auto;
+  margin: 2rem auto;
   width: 75%;
   display: flex;
   align-items: center;
@@ -62,7 +62,7 @@ body {
 
 .home-button {
   padding: 5px 10px;
-  background-color: lightskyblue;
+  /* background-color: lightskyblue; */
 }
 
 .movie-list {
@@ -74,9 +74,9 @@ body {
 }
 
 .save-button {
-  /* position: absolute; */
-  /* top: 25px; */
-  /* right: 25px; */
+  position: absolute;
+  top: 25px;
+  right: 25px;
   border: 1px solid grey;
   padding: 7px 15px;
   margin: 5px;
@@ -93,10 +93,10 @@ body {
 }
 
 .wrapper {
-  /* justify-content: center; */
-  /* border: 4px solid green; */
+  justify-content: center;
+  border: 4px solid green;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-around; */
-  /* align-items: center; */
+  justify-content: space-around;
+  align-items: center;
 }
